--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ idna==2.7
 multidict==4.3.1
 pycparser==2.18
 PyNaCl==1.0.1
-requests==2.19.1
+requests>=2.20.0
 six==1.11.0
 spotipy==2.4.4
 urllib3==1.23
